[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buttons/Dpad.gd" type="Script" id=1]
[ext_resource path="res://Images/DpadButton_Unpressed.png" type="Texture" id=2]
[ext_resource path="res://Images/DpadButton_Pressed.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -130, 80, -40, 170, 120, 130, 120, -130, -40, -170, -130, -80 )

[node name="Dpad" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -62.5
margin_right = 62.5
margin_bottom = 62.5
rect_scale = Vector2( 6, 6 )
rect_pivot_offset = Vector2( 62.5, 62.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2( 71.8002, 39.8002 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
passby_press = true

[node name="Leftbutton" type="TouchScreenButton" parent="."]
position = Vector2( 52.8001, 84.8002 )
rotation = 3.14159
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
passby_press = true

[node name="DownButton" type="TouchScreenButton" parent="."]
position = Vector2( 84.6333, 71.8001 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
passby_press = true

[node name="UpButton" type="TouchScreenButton" parent="."]
position = Vector2( 39.8001, 52.8002 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
passby_press = true

[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="released" from="RightButton" to="." method="_on_RightButton_released"]
[connection signal="pressed" from="Leftbutton" to="." method="_on_Leftbutton_pressed"]
[connection signal="released" from="Leftbutton" to="." method="_on_Leftbutton_released"]
[connection signal="pressed" from="DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="released" from="DownButton" to="." method="_on_DownButton_released"]
[connection signal="pressed" from="UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="released" from="UpButton" to="." method="_on_UpButton_released"]
